--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
 <body>
     <h1>My first project</h1>
+    <h2>VS Code is awesome!</h2>
     <p>This is my first project built in an IDE!</p>
-    <img src="assets/images/ci-logo.png" alt="Code Institute logo">
+    <img src="assets/images/ci-logo.png" alt="Code Institute logo" />
 </body>
 
 </html>
