--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h1>My first project</h1>
     <h2>VS Code is awesome!</h2>
     <p>This is my first project built in an IDE!</p>
+    <p class="text-center">Using the VS Code Source Control Panel makes committing my code even faster!</p>
     <img src="assets/images/ci-logo.png" alt="Code Institute logo" />
 </body>
 
